--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="PlayerOneName">Dominic</string>
     <string name="round_name_plate">Runde : </string>
     <string name="no_valid_turn">Kein valider Zug!</string>
+    <string name="winner_text">\"Der Gewinner ist : \"</string>
 </resources>
