--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="round_name_plate">Runde : </string>
     <string name="no_valid_turn">Kein valider Zug!</string>
     <string name="winner_text">\"Der Gewinner ist : \"</string>
+    <string name="serverFailed">Server Online : Die Verbindung schlug fehl!</string>
+    <string name="responseServer">Response Server</string>
 </resources>
